_extra_apps/gitea-argocd-kustomize/workloads/gitea/base/application/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
spec:
  serviceName: gitea
  replicas: 1
  revisionHistoryLimit: 3
  selector: {}
  template:
    spec:
      terminationGracePeriodSeconds: 60
      securityContext:
        fsGroup: 1000
      containers:
        - name: gitea
          image: gitea/gitea:1.17-rootless
          imagePullPolicy: IfNotPresent
          resources: {}

          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: ssh
              containerPort: 2222
              protocol: TCP

          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /tmp
              name: temp
            - mountPath: /data
              name: data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: temp
          emptyDir: {}
        - name: gitea-config
          configMap:
            name: gitea-config-file
