_extra_apps/gitea-argocd-kustomize/workloads/gitea/base/application/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
