_extra_apps/gitea-argocd-kustomize/workloads/gitea/base/application/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-compress@kubernetescrd"

spec:
  rules:
  - host: "gitea.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
